Fixed spacing between packages

--- a/_/css/tourstyles.css
+++ b/_/css/tourstyles.css
@@ -67,7 +67,7 @@ img.tailored_icons {
 
 div.tours_packages {
 
-	height: 1800px;
+	height: 2280px;
 }
 
 div.pkg_adventures img.pkg_thumb_pic {
